--- a/Final Concrete Mix.ipynb
+++ b/Final Concrete Mix.ipynb
@@ -2,9 +2,50 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Welcome to the Concrete Mix Design as per IS 10262\n",
+      "Enter concrete type (Plain/RCC): rcc\n",
+      "Enter the exposure level (Mild, Moderate, Severe, Very Severe, Extreme): severe\n",
+      "Minimum grade of concrete should be M 30\n",
+      "Characteristic compressive strength at 28 day's in N/mm^2: 40\n",
+      "Is standard deviation calculated? (Y/N): n\n",
+      "Target strength: 48.25 N/mm2\n",
+      "Enter A, B, C or D for the type of corse aggregate:\n",
+      "A. Angular coarse aggregate  B. Sub-angular coarse aggregate  C. Gravel with some crushed particles  D. Rounded gravel a\n",
+      "Enter the maximum nominal size of aggregate (mm): 20\n",
+      "Enter the grading zone of fine aggregates as per IS 383 (1,2,3 or 4): 2\n",
+      "Enter the slump value (mm): 110\n",
+      "Is the concrete pumpable (Y/N)? n\n",
+      "Is superplasticizer added? (Y/N): n\n",
+      "Is specific gravity of cement calculated? (Y/N): n\n",
+      "Taking specific gravity of cement as 3.15\n",
+      "Is specific gravity of coarse aggregate calculated? (Y/N): n\n",
+      "Taking specific gravity of coarse aggregate as 2.74\n",
+      "Is specific gravity of fine aggregate calculated? (Y/N): n\n",
+      "Taking specific gravity of fine aggregate as 2.74\n",
+      "\n",
+      "The volume of coarse aggregate is 0.62.\n",
+      "The volume of fine aggregate is 0.38.\n",
+      "The minimum cement content for rcc concrete in severe exposure is 320 kg/m3.\n",
+      "The maximum cement content is 450 kg/m3.\n",
+      "\n",
+      "The mix proportion is as follows: \n",
+      "Cement: 416 kg/m3\n",
+      "Water: 199 kg/m3\n",
+      "Fine aggregate: 688 kg/m3\n",
+      "Course aggregate: 1143 kg/m3\n",
+      "Water-cement ratio: 0.48\n",
+      "The mix proportion (C:FA:CA) by volume is: 1:2.8:4.7\n",
+      "The mix proportion (C:FA:CA) by mass is: 1:1.7:2.7\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Welcome to the Concrete Mix Design as per IS 10262\")\n",
     "\n",
