--- a/Final Concrete Mix.ipynb
+++ b/Final Concrete Mix.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -10,39 +10,39 @@
      "output_type": "stream",
      "text": [
       "Welcome to the Concrete Mix Design as per IS 10262\n",
-      "Enter concrete type (Plain/RCC): rcc\n",
-      "Enter the exposure level (Mild, Moderate, Severe, Very Severe, Extreme): severe\n",
+      "Enter concrete type (Plain/RCC): RCC\n",
+      "Enter the exposure level (Mild, Moderate, Severe, Very Severe, Extreme): SEVERE\n",
       "Minimum grade of concrete should be M 30\n",
       "Characteristic compressive strength at 28 day's in N/mm^2: 40\n",
-      "Is standard deviation calculated? (Y/N): n\n",
+      "Is standard deviation calculated? (Y/N): N\n",
       "Target strength: 48.25 N/mm2\n",
       "Enter A, B, C or D for the type of corse aggregate:\n",
-      "A. Angular coarse aggregate  B. Sub-angular coarse aggregate  C. Gravel with some crushed particles  D. Rounded gravel a\n",
+      "A. Angular coarse aggregate  B. Sub-angular coarse aggregate  C. Gravel with some crushed particles  D. Rounded gravel A\n",
       "Enter the maximum nominal size of aggregate (mm): 20\n",
       "Enter the grading zone of fine aggregates as per IS 383 (1,2,3 or 4): 2\n",
-      "Enter the slump value (mm): 110\n",
-      "Is the concrete pumpable (Y/N)? n\n",
-      "Is superplasticizer added? (Y/N): n\n",
-      "Is specific gravity of cement calculated? (Y/N): n\n",
+      "Enter the slump value (mm): 100\n",
+      "Is the concrete pumpable (Y/N)? N\n",
+      "Is superplasticizer added? (Y/N): N\n",
+      "Is specific gravity of cement calculated? (Y/N): N\n",
       "Taking specific gravity of cement as 3.15\n",
-      "Is specific gravity of coarse aggregate calculated? (Y/N): n\n",
+      "Is specific gravity of coarse aggregate calculated? (Y/N): N\n",
       "Taking specific gravity of coarse aggregate as 2.74\n",
-      "Is specific gravity of fine aggregate calculated? (Y/N): n\n",
+      "Is specific gravity of fine aggregate calculated? (Y/N): N\n",
       "Taking specific gravity of fine aggregate as 2.74\n",
       "\n",
       "The volume of coarse aggregate is 0.62.\n",
       "The volume of fine aggregate is 0.38.\n",
-      "The minimum cement content for rcc concrete in severe exposure is 320 kg/m3.\n",
+      "The minimum cement content for RCC concrete in SEVERE exposure is 320 kg/m3.\n",
       "The maximum cement content is 450 kg/m3.\n",
       "\n",
       "The mix proportion is as follows: \n",
-      "Cement: 416 kg/m3\n",
-      "Water: 199 kg/m3\n",
-      "Fine aggregate: 688 kg/m3\n",
-      "Course aggregate: 1143 kg/m3\n",
+      "Cement: 411 kg/m3\n",
+      "Water: 197 kg/m3\n",
+      "Fine aggregate: 692 kg/m3\n",
+      "Course aggregate: 1150 kg/m3\n",
       "Water-cement ratio: 0.48\n",
-      "The mix proportion (C:FA:CA) by volume is: 1:2.8:4.7\n",
-      "The mix proportion (C:FA:CA) by mass is: 1:1.7:2.7\n"
+      "The mix proportion (C:FA:CA) by volume is: 1:2.9:4.8\n",
+      "The mix proportion (C:FA:CA) by mass is: 1:1.7:2.8\n"
      ]
     }
    ],
@@ -52,27 +52,18 @@
     "Type=input(\"Enter concrete type (Plain/RCC): \")\n",
     "cond=input(\"Enter the exposure level (Mild, Moderate, Severe, Very Severe, Extreme): \")\n",
     "condition=[\"mild\",\"moderate\",\"severe\",\"very severe\",\"extreme\"]\n",
-    "if Type.lower()==\"plain\":\n",
-    "            if cond.lower()==\"moderate\":\n",
-    "                print(\"Minimum grade of concrete should be M 15\")\n",
-    "            elif cond.lower()==\"severe\":\n",
-    "                print(\"Minimum grade of concrete should be M 20\")\n",
-    "            elif cond.lower()==\"very severe\":\n",
-    "                print(\"Minimum grade of concrete should be M 20\")\n",
-    "            elif cond.lower()==\"extreme\":\n",
-    "                print(\"Minimum grade of concrete should be M 25\")\n",
+    "pg=[15,20,20,25] #grade recommended as per exposure level Plain\n",
+    "rccg=[20,25,30,35,40] #grade recommended as per exposure level RCC\n",
     "\n",
-    "elif Type.lower()==\"rcc\":\n",
-    "            if cond.lower()==\"mild\":\n",
-    "                print(\"Minimum grade of concrete should be M 20\")\n",
-    "            elif cond.lower()==\"moderate\":\n",
-    "                print(\"Minimum grade of concrete should be M 25\")\n",
-    "            elif cond.lower()==\"severe\":\n",
-    "                print(\"Minimum grade of concrete should be M 30\")\n",
-    "            elif cond.lower()==\"very severe\":\n",
-    "                print(\"Minimum grade of concrete should be M 35\")\n",
-    "            elif cond.lower()==\"extreme\":\n",
-    "                print(\"Minimum grade of concrete should be M 40\")\n",
+    "if Type.lower()==\"plain\":\n",
+    "    for i in range(1,5):\n",
+    "        if cond.lower()==condition[i]:\n",
+    "            print(\"Minimum grade of concrete should be M {0}\".format(pg[i-1]))\n",
+    "if Type.lower()==\"rcc\":\n",
+    "    for i in range(0,5):\n",
+    "        if cond.lower()==condition[i]:\n",
+    "            print(\"Minimum grade of concrete should be M {0}\".format(rccg[i]))\n",
+    "\n",
     "fck=float(input(\"Characteristic compressive strength at 28 day's in N/mm^2: \")) #Asking the mix strength\n",
     "SD=input(\"Is standard deviation calculated? (Y/N): \") #asking the Standard Deviation for strength\n",
     "\n",
@@ -98,6 +89,7 @@
     "if SP.lower()==\"y\":\n",
     "    sp=input(\"Is the water content reduction due to superplasticizer calculated? (Y/N): \")\n",
     "    if sp.lower()==\"n\":\n",
+    "        print(\"Assuming 20% reduction in water content due to superplasticizer.\")\n",
     "        sp=20 #20% default reduction in water content (kg) per cubic meter of concrete.\n",
     "    elif sp.lower()==\"y\":\n",
     "        sp=float(input(\"Enter the percent water content reduction due to superplasticizer: \"))\n",
@@ -267,18 +259,6 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.6"
   }
  },
  "nbformat": 4,
